--- a/black-friday/Analysis.ipynb
+++ b/black-friday/Analysis.ipynb
@@ -2562,7 +2562,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By doing analysis we found that XRT is the best hyperparameter model and having seed range greater as compared with others"
+    "1. By doing analysis we found that GLM models best hyperparameters are seed, lambda and alpha\n",
+    "2. In Deep Learning best hyperparameter is learning_rate\n",
+    "3. In GBM learn_rate, mean_spli, mean_sample_leaf, max_depth are best hyperparameters."
    ]
   },
   {
