--- a/black-friday/Hyperparamater_final.ipynb
+++ b/black-friday/Hyperparamater_final.ipynb
@@ -1013,7 +1013,7 @@
     "    str+=alpha[i]   \n",
     "  return str\n",
     "  \n",
-    "  \n",
+    " # function to set metadata \n",
     "def set_meta_data(analysis,run_id,server,data,test,model_path,target,run_time,classification,scale,model,balance,balance_threshold,name,path,nthreads,min_mem_size):\n",
     "  m_data={}\n",
     "  m_data['start_time'] = time.time()\n",
@@ -1039,7 +1039,7 @@
     "  m_data['analysis'] = analysis\n",
     "  return m_data\n",
     "\n",
-    "\n",
+    "# function to convert dictionary to json file\n",
     "def dict_to_json(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -1081,7 +1081,7 @@
     "    d['residual_deviance']=modl.residual_deviance()\n",
     "    d['rmse']=modl.rmse()\n",
     "    return d\n",
-    "\n",
+    "# function for getting model by algorithm\n",
     "def get_model_by_algo(algo,models_dict):\n",
     "    mod=None\n",
     "    mod_id=None    \n",
@@ -1091,7 +1091,7 @@
     "            mod=h2o.get_model(m)      \n",
     "    return mod,mod_id     \n",
     "    \n",
-    "    \n",
+    "# function for generating the statistic model of gbm    \n",
     "def gbm_stats(modl):\n",
     "    d={}\n",
     "    d['algo']=modl.algo\n",
@@ -1099,7 +1099,7 @@
     "    d['varimp']=modl.varimp()  \n",
     "    return d\n",
     "    \n",
-    "    \n",
+    "# function for generating statistic model of dl    \n",
     "def dl_stats(modl):\n",
     "    d={}\n",
     "    d['algo']=modl.algo\n",
@@ -1107,7 +1107,7 @@
     "    d['varimp']=modl.varimp()  \n",
     "    return d\n",
     "    \n",
-    "    \n",
+    " # function for generating statistic model for drf algorithm   \n",
     "def drf_stats(modl):\n",
     "    d={}\n",
     "    d['algo']=modl.algo\n",
@@ -1115,7 +1115,7 @@
     "    d['varimp']=modl.varimp()  \n",
     "    d['roc']=modl.roc()      \n",
     "    return d\n",
-    "    \n",
+    "# function for generating xrt model    \n",
     "def xrt_stats(modl):\n",
     "    d={}\n",
     "    d['algo']=modl.algo\n",
@@ -1124,7 +1124,7 @@
     "    d['roc']=modl.roc()      \n",
     "    return d\n",
     "    \n",
-    "    \n",
+    "# function for generating glm model    \n",
     "def glm_stats(modl):\n",
     "    d={}\n",
     "    d['algo']=modl.algo\n",
@@ -1132,7 +1132,7 @@
     "    d['coef']=modl.coef()  \n",
     "    d['coef_norm']=modl.coef_norm()      \n",
     "    return d\n",
-    "    \n",
+    " # function for measuring performance   \n",
     "def model_performance_stats(perf):\n",
     "    d={}\n",
     "    try:    \n",
@@ -1195,7 +1195,7 @@
     "        df[ints] = df[ints].scale()    \n",
     "    return\n",
     "\n",
-    "\n",
+    "# function for generating variable importance\n",
     "def get_independent_variables(df, targ):\n",
     "    C = [name for name in df.columns if name != targ]\n",
     "    # determine column types\n",
@@ -1210,7 +1210,7 @@
     "                reals.append(key)    \n",
     "    x=ints+enums+reals\n",
     "    return x\n",
-    "    \n",
+    " # function for getting all variables to csv   \n",
     "def get_all_variables_csv(i):\n",
     "    ivd={}\n",
     "    try:\n",
@@ -1226,7 +1226,7 @@
     "    return ivd\n",
     "    \n",
     "    \n",
-    "\n",
+    "# function for checking all variabls\n",
     "def check_all_variables(df,dct,y=None):     \n",
     "    targ=list(dct.keys())     \n",
     "    for key, val in df.types.items():\n",
@@ -1485,7 +1485,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generating the metadata file"
+    "specifying the server path, run id, data path, classification, execution time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting dictionary to JSON files"
    ]
   },
   {
@@ -1699,6 +1706,13 @@
    "source": [
     "print(X)\n",
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting up the autoML"
    ]
   },
   {
@@ -2164,7 +2178,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Displaying the best model\n",
     "mod_best._id"
    ]
   },
@@ -2174,6 +2188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# converting dictionary to JSON\n",
     "def dict_to_json(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -2187,6 +2202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function for converting JSON to CSV\n",
     "def json_to_csv(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -2313,6 +2329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# storing the data into JSON file\n",
     "def dict_to_json(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -2347,15 +2364,6 @@
    "source": [
     "hy_parameter = mod_best.params\n",
     "n='hyperparameter1_500.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_to_csv(hy_parameter,n)"
    ]
   },
   {
@@ -2827,6 +2835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dictionary to JSON conversion\n",
     "def dict_to_json(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -3692,6 +3701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converting file to JSON\n",
     "def dict_to_json(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -4847,9 +4857,9 @@
     }
    ],
    "source": [
-    "\n",
+    "# \n",
     "# meta data\n",
-    "meta_data = set_meta_data(analysis, run_id,server_path,data_path,test_path,model_path,target,run_time,classification,scale,max_models,balance_y,balance_threshold,name,run_dir,nthreads,min_mem_size)\n",
+    "meta_data = set_meta_data(analysis, run_id,server_path,data_path,model_path,target,run_time,classification,scale,max_models,balance_y,balance_threshold,name,run_dir,nthreads,min_mem_size)\n",
     "print(meta_data)"
    ]
   },
@@ -4859,6 +4869,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converting dictionary to JSON\n",
     "def dict_to_json(dct,n):\n",
     "  j = json.dumps(dct, indent=4)\n",
     "  f = open(n, 'w')\n",
@@ -4901,6 +4912,13 @@
    "outputs": [],
    "source": [
     "data_path='train1.csv'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running H2O Model"
    ]
   },
   {
